tests/baselines/reference/enumTagCircularReference.errors.txt
bug27142.js(1,12): error TS2456: Type alias 'E' circularly references itself.


==== bug27142.js (1 errors) ====
    /** @enum {E} */
               ~
!!! error TS2456: Type alias 'E' circularly references itself.
    const E = { x: 0 };
    